assets/chat/css/style.scss
/* ... */
.msg-status.msg-continue .text:before,
.msg-command.msg-continue .text:before,
.msg-info.msg-continue .text:before,
.msg-error.msg-continue .text:before,
.msg-broadcast.msg-continue .text:before {
    content: '';
}

/* /ME message */
.msg-me {
    font-style: italic;
    margin: 4px 0;

    .features {
        display: none;
    }

    .time {
        font-style: unset;
    }

    .greentext {
        color: $color-chat-text2;
    }

    a.user {
        display: inline-block;
        position: relative;
        background-color: transparent;
        background-position-x: 200px;
        border: none;
        padding: 0 2px;
        color: #eee;
        margin-left: 7px;
        margin-right: 2px;
        box-shadow: none;

        &::before {
            content: "*";
            position: absolute;
            font-weight: normal;
            left: -6px;
            color: $color-chat-text2;
        }
    }

    &::after {
        content: " *";
    }
}

/* Whispers */
.msg-whisper {
    background-color: $color-chat-emphasize;
}
.msg-whisper a.user {
    background-color: $color-accent;
    background-position-x: 200px;
    padding: 2px 5px 2px 5px;
    border-radius: 2px;
    color: white;
    font-weight: normal;
    margin-right: 7px;
    border: none;
}
.msg-whisper a.user:hover {
    text-decoration: none;
    color: $color-accent;
    background-color: white;
    background-position-x: 200px;
}

/* Tagging */
.msg-tagged {
    position: relative;
    padding-left: 7px;
    margin-bottom: 3px;
}
.pref-taggedvisibility .msg-tagged:not(.msg-highlight) {
    background-color: $color-chat-tagged;
    padding-top: 2.7px;
    padding-bottom: 2.4px;

    $border-highlight: mix( white, $color-chat-tagged, 2 );
    border-top: 1px solid $border-highlight;
    border-bottom: 1px solid $border-highlight;

    .greentext {
        color: $color-green-text-highlight;
    }

    .time {
        color: $color-chat-text3;
    }
}
.msg-tagged:before {
    position: absolute;
    top:0;
    left:0;
    bottom:0;
    min-width: 4px;
    display: block;
    background: map-get( $tag-color-map, black );
    content: '';
}
.pref-taggedvisibility .msg-tagged,
.msg-tagged.msg-highlight {
    &::before {
        top: -1px;
        bottom: -1px;
    }
}
.pref-taggedvisibility .msg-tagged.msg-continue,
.msg-highlight.msg-continue,
.msg-own.msg-continue {
    .text:before {
        color: lighten( $color-chat-disabled, 20 );
    }
}

@each $name, $color in $tag-color-map {
    .msg-tagged-#{$name} {
        &:before {
            background-color: $color;
        }

        @at-root .chat:not(.pref-showtime) & a.user {
            border-left-color: mix( $color, black, 18 );
        }
    }
}

/* Historical messages */
.msg-historical {
    color: $text-color1;
}
.msg-historical:before {
    background: none !important;
}
.msg-historical .time {
    display: inline !important;
}
.chat-output:not(.chat-win-main) {
    .msg-historical {
        background-color: $color-chat-emphasize;
        color: $color-chat-text1;
    }
    .msg-historical.msg-own {
        background: none !important;
        color: $color-chat-text2;
    }
}

/* Broadcasts */
.msg-broadcast {
    text-shadow: 1px 1px 3px rgba(0,0,0,1);
    background-color: $color-chat-emphasize;
    color: $color-text-broadcast !important;
    font-size: 110%;
    font-weight: 400;
    padding-top: 6px;
    padding-bottom: 6px;
    time {
        margin-right: 5px;
    }
}

/* Highlight */
.msg-highlight {
    color: #CCC;
    background-color: $color-chat-highlight;
    padding-top: 2.7px;
    padding-bottom: 2.4px;
    margin-bottom: 3px;

    $border-highlight: mix( white, $color-chat-highlight, 3 );
    border-top: 1px solid $border-highlight;
    border-bottom: 1px solid $border-highlight;

    .time {
        color: lighten( $color-chat-time, 18 );
    }

    .greentext {
        color: $color-green-text-highlight;
    }
}
.pref-taggedvisibility .msg-highlight {
    background-color: $color-chat-highlight;
}

/* Focus or highlight a line */
.focus-user .msg-chat {
    opacity:0.3;
}

/* Emotes and combo */
.chat-emote {
    display: inline-block;
    position: relative;
    z-index: 1;
    top: 10px;
    margin-left: 2px;
    margin-right: 2px;
    overflow: hidden;
    text-indent: -90000px;
    vertical-align: middle;
    padding-left: 0.5em;
    image-rendering: -moz-crisp-edges;
}
/* ... */

